--- a/styles/Battle.css
+++ b/styles/Battle.css
@@ -8,6 +8,13 @@
   background-size: cover;
   image-rendering: pixelated;
 }
+.Battle.green-kitchen {
+  background-image: url(/images/maps/GreenKitchenBattle.png);
+}
+.Battle.dining-room {
+  background-image: url(/images/maps/DiningRoomBattle.png);
+}
+
 
 .Battle_hero, .Battle_enemy {
   position: absolute;
@@ -33,7 +40,6 @@
 }
 
 /* Animations */
-
 @keyframes battle-damage-blink {
   to {
     visibility: hidden; 
@@ -60,19 +66,17 @@
   animation: battle-spin-left 0.8s;
 }
 
-.glob-orb{
+.glob-orb {
   position: absolute;
-  width: 32px;
-  height: 32;
+  width:32px;
+  height:32px;
 }
-
 @keyframes battle-glob-right {
-  0% {transform: translate3d(0,0,0) scale(0.5); opacity: 1;}
-  50% {transform: translate3d(10px,-80px,0) scale(1); opacity: 1;}
-  80% {transform: translate3d(149px,-47px, 0) scale(1); opacity: 1;}
-  100% {transform: translate3d(149px,-47px, 0) scale(3); opacity: 0;}
+  0% { transform: translate3d(0,0,0) scale(0.5); opacity: 1}
+  50% { transform: translate3d(10px,-80px,0) scale(1); opacity: 1; }
+  80% {  transform: translate3d(149px, -47px, 0) scale(1);opacity:1 }
+  100% {  transform: translate3d(149px, -47px, 0) scale(3);opacity:0 }
 }
-
 .battle-glob-right {
   left: 70px;
   top: 104px;
@@ -80,12 +84,11 @@
 }
 
 @keyframes battle-glob-left {
-  0% {transform: translate3d(0,0,0) scale(0.5); opacity: 1;}
-  50% {transform: translate3d(-10px,-50px,0) scale(1); opacity: 1;}
-  80% {transform: translate3d(-174px,47px, 0) scale(1); opacity: 1;}
-  100% {transform: translate3d(-174px,47px, 0) scale(3); opacity: 0;}
+  0% { transform: translate3d(0,0,0) scale(0.5); opacity: 1}
+  50% { transform: translate3d(-10px,-50px,0) scale(1); opacity: 1; }
+  80% {  transform: translate3d(-174px, 47px, 0) scale(1);opacity:1 }
+  100% {  transform: translate3d(-174px, 47px, 0) scale(3);opacity:0 }
 }
-
 .battle-glob-left {
   left: 227px;
   top: 56px;
