--- a/styles/global.css
+++ b/styles/global.css
@@ -17,16 +17,26 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  font-family: 'Ribeye', cursive;
+}
+.how-to-play {
+  position: absolute;
+  left:0; right:0;
+  bottom: 0;
+  text-align:center;
+  font-size: 12px;
+  color: #fff;
 }
 
 .game-container {
-  position: relative; 
-  width: 352px;
-  height: 198px;
+  position: relative;
+  background: #9ae2ff;
+  width: 350px;
+  height: 190px;
   margin: 0 auto;
   outline: 1px solid #fff;
 
-  transform: scale(2) translateY(50%);
+  transform: scale(3) translateY(50%);
 }
 
 .game-container canvas {
